--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-legobot==1.0.0
-dice
-requests
+Legobot
+pyflakes==1.3.0
+bandit==1.3.0
+legos.xkcd
+legos.wtf
+legos.stocks
+legos.codinglove
+legos.dice
+legos.devopsy
